tests/fail/spread_resource_no_cede.stderr
error[E0406]: Field 'ptr' of type '^i32' is non-Copyable. You must explicitly use 'cede base.*' or 'base.clone().*' to initialize.
 --> tests/fail/spread_resource_no_cede.tk:10:39
   |
 10 |     auto r2 = ResourceBox(id = 200, r1.*)
   |                                       ^
